Editing Home Page

--- a/fundme/templates/base.html
+++ b/fundme/templates/base.html
@@ -5,10 +5,11 @@
 </head>
 <body>
   <header>
-    <button><a href="signup.html">Sign Up</a></button>
-    <button><a href="login.html">Sign In</a></button>
-    <button><a href="profile.html">Profile</a></button>
-    <button><a href="home.html">Home</a></button>
+    <button><a href="http://127.0.0.1:8000/signup/">Sign Up</a></button>
+    <button><a href="http://127.0.0.1:8000/login/">login</a></button>
+    <button><a href="http://127.0.0.1:8000/logout/">Logout</a></button>
+    <button><a href="http://127.0.0.1:8000/profile/">Profile</a></button>
+    <button><a href="http://127.0.0.1:8000/">Home</a></button>
   </header>
   
   {% block content %}{% endblock %}
